--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0"
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
