--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -35,5 +35,5 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
-          vercel-project-id: ${{ secrets.VERCE_PROJECT_ID}}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
           github-comment: false
