--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -20,14 +20,6 @@ jobs:
                 "destination": "${{ secrets.API_BASE_URL }}/:url*"
               }
             ],
-            "version": 2,
-            "public": false,
-            "github": {
-              "enabled": false
-            },
-            "builds": [
-              { "src": "{{Source for distribution}}", "use": "@vercel/static" }
-            ]
           }
           ' >> vercel.json
       - uses: amondnet/vercel-action@v20
@@ -36,3 +28,4 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
+          alias-domains:
