--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -19,14 +19,6 @@ jobs:
                 "source": "/api/:url*",
                 "destination": "${{ secrets.API_BASE_URL }}/:url*"
               }
-            ],
-            "version": 2,
-            "public": false,
-            "github": {
-              "enabled": false
-            },
-            "builds": [
-              { "src": "{{Source for distribution}}", "use": "@vercel/static" }
             ]
           }
           ' >> vercel.json
@@ -34,8 +26,5 @@ jobs:
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-args: '--preview'
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
-          vercel-project-id: ${{ secrets.VERCE_PROJECT_ID}}
-          working-directory: ./sub-directory
-          github-comment: false
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
