--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,30 +1,18 @@
-name: Vercel Preview Deployment
+name: Build
 
 on:
   pull_request:
     branches: dev
+  push:
+    branches: deploy/*
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: create vercel.json
-        run: |
-          touch vercel.json
-          echo '
-          {
-            "rewrites": [
-              {
-                "source": "/api/:url*",
-                "destination": "${{ secrets.API_BASE_URL }}/:url*"
-              }
-            ]
-          }
-          ' >> vercel.json
-      - uses: amondnet/vercel-action@v20
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}}
+          node-version: 18
+      - run: npm ci
+      - run: npm run build --if-present
