--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -7,7 +7,7 @@ on:
     branches: [dev, deploy/*]
 
 jobs:
-  deploy:
+  preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
